# azure-deploy-test

./: .gitignore  README.md  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: main_azure-deploy-test.yml
app/: main.py
