[tool.poetry]
name = "your-fastapi-app"
version = "0.1.0"
description = "FastAPI application deployed on Azure"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
annotated-types = "^0.7.0"
anyio = "^4.9.0"
click = "^8.2.1"
h11 = "^0.16.0"
idna = "^3.10"
pydantic-core = "^2.33.2"
sniffio = "^1.3.1"
starlette = "^0.47.2"
typing-extensions = "^4.14.1"
typing-inspection = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"